--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,5 +1,5 @@
-$red: #A481CA;
-$reddark: #7F689C;
+$red: #0069A6;
+$reddark: #00598D;
 $dark: rgb(33,33,33);
 $lightdark: rgba(33,33,33,0.711);
-$pink: rgb(255,239,239);
+$pink: #D1EAFF;
