--- a/src/styles/shipping.scss
+++ b/src/styles/shipping.scss
@@ -45,7 +45,7 @@
                 }
             }
 
-            >a{
+            >button{
                 background-color: $red;
                 color: white;
                 outline: none;
