--- a/src/styles/confirmorder.scss
+++ b/src/styles/confirmorder.scss
@@ -40,7 +40,7 @@
                 }
             }
 
-            >a{
+            >button{
                 background-color: $red;
                 color: white;
                 outline: none;
